--- a/resources/css/user.css
+++ b/resources/css/user.css
@@ -317,7 +317,7 @@ body {
 
 .card-actions {
     padding: 1rem 1.5rem;
-    background: rgba(240, 249, 255, 0.5);
+    /* background: rgba(240, 249, 255, 0.5); */
     border-top: 1px solid rgba(14, 165, 233, 0.1);
 }
 
